🐛 Add wrapping container in recommendations item to correctly set its height

--- a/frontend/scss/components/molecules/pixi-recommendations-item.scss
+++ b/frontend/scss/components/molecules/pixi-recommendations-item.scss
@@ -4,19 +4,22 @@
 @import '_variables.scss';
 
 .#{molecule('pixi-recommendations-item')} {
-  $root: &;
+  $recommendationsItem: &;
   margin-top: 30px;
-  padding: 30px 18px;
-  border: solid 2px color('mercury');
-  border-radius: 8px;
   transition: transform 0.25s ease-in, background 0.25s ease-in, box-shadow 0.3s ease-in, border-color 0.3s ease-in;
 
-  @media (min-width: 768px) {
-    padding: 23px;
-  }
+  &-box {
+    padding: 30px 18px;
+    border-radius: 8px;
+    border: solid 2px color('mercury');
 
-  @media (min-width: 1024px) {
-    padding: 33px;
+    @media (min-width: 768px) {
+      padding: 23px;
+    }
+
+    @media (min-width: 1024px) {
+      padding: 33px;
+    }
   }
 
   &-header {
@@ -106,12 +109,15 @@
   &.expanded {
     @media (min-width: 768px) {
       transform: translateY(-.125em);
-      border-color: transparent;
-      background: safeColor('white');
-      box-shadow: 0 15px 30px 0 fade-out(color('black'), .85);
+
+      #{$recommendationsItem}-box {
+        border-color: transparent;
+        background: safeColor('white');
+        box-shadow: 0 15px 30px 0 fade-out(color('black'), .85);
+      }
     }
 
-    #{$root} {
+    #{$recommendationsItem} {
       &-header-toggle {
         transform: rotate(180deg);
       }
